# LLaMA-Factory

./: example_tools.md  mmlu.ipynb  pyproject.toml  with_origin_model_llama3.ipynb
configs/: llama3.2-1b_4_blocks_coral.yaml  llama3.2-1b_4_blocks_coral_pretain.yaml  llama3.2-1b_4_blocks_coral_sft.yaml  llama31_4_blocks_coral.yaml  llama31_4_blocks_longhorn_example.yaml  llama31_4_blocks_longwriter.yaml  llama31_4_blocks_math.yaml  llama31_4_blocks_pretrain_experiment.yaml  llama31_4_blocks_pretrain_then_sft_experiment.yaml  llama31_4_blocks_rag_examples.yaml  llama31_4_blocks_rag_examples_sft.yaml  phi35_4_blocks_fcpfv4_round1.yaml  phi35_4_blocks_fcpfv4_round2.yaml
configs/function_calling/llama32-1b/: llama32-1b-pretain-test.yaml  llama32-1b-pretain.yaml  llama32-1b-sft_round1.yaml  llama32-1b-sft_round2.yaml  llama32-1b-sft_round3.yaml
configs/function_calling/llama32-1b-instruct/: llama32-1b-instruct-sft_round1.yaml  llama32-1b-instruct-sft_round2.yaml
data/: dataset_info.json  example_rag_pt.json  example_rag_sft.json  scraped_articles.json
evaluation/mmlu/: mapping.json
examples/deepspeed/: ds_z3_config.json
examples/extras/llama_pro/: expand.sh
examples/merge_lora/: llama3_lora_sft.yaml  merge.sh
inference/: 4_blocks_coral.yaml  4_blocks_longwriter_inference.yaml  4_blocks_pretrain_experimentv1.yaml  example_rag.yaml  llama3.2-1b_4_blocks_coral_sft.yaml.yaml  llama3.2-1b_expanded_4_base.yaml  llama3.2-1b_expanded_4_coral_v1.yaml  phi3.5_expanded_4_base.yaml  phi3.5_expanded_4_function_calling.yaml
scripts/: llama_pro.py  llama_pro_llama.py
(+22 files in other folders)
